# company_structure

./: CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt
backend/commands/: CMakeLists.txt
backend/commands/include/: commands.hpp  commands_pool.hpp  commands_tasks.hpp
backend/commands/source/: commands.cpp  commands_pool.cpp  commands_tasks.cpp
backend/company_structure/: CMakeLists.txt
backend/company_structure/include/: company_structure.hpp
backend/company_structure/source/: company_structure.cpp
backend/parser/: CMakeLists.txt
backend/parser/include/: parser.hpp
frontend/: CMakeLists.txt
frontend/add_department_window/: add_department.cpp  add_department.h  add_department.ui
frontend/add_worker_window/: add_worker_window.cpp  add_worker_window.h  add_worker_window.ui
frontend/change_department_name_window/: change_department_name.cpp  change_department_name.h  change_department_name.ui
frontend/change_worker_window/: change_worker.cpp  change_worker.h  change_worker.ui
frontend/delete_department_window/: delete_department.cpp  delete_department.h  delete_department.ui
frontend/delete_worker_window/: delete_worker.cpp  delete_worker.h  delete_worker.ui
frontend/main_window/: main_window.cpp  main_window.h  main_window.ui
